@@ -315,6 +315,7 @@ int _OpenPlugins() {
 	SPU_registerCallback(SPUirq);
 	ret = GPU_open(&gpuDisp, "PCSX", NULL);
 	if (ret < 0) { SysMessage(_("Error opening GPU plugin!")); return -1; }
+	GPU_registerCallback(GPUbusy);
 	ret = PAD1_open(&gpuDisp);
 	if (ret < 0) { SysMessage(_("Error opening Controller 1 plugin!")); return -1; }
 	ret = PAD2_open(&gpuDisp);
