@@ -151,7 +151,8 @@ enum {
 	PSXINT_CDREAD,
 	PSXINT_GPUDMA,
 	PSXINT_MDECOUTDMA,
-	PSXINT_SPUDMA
+	PSXINT_SPUDMA,
+	PSXINT_GPUBUSY
 };
 
 typedef struct {
